--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,11 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 2rem 0;
+  background: rgb(16,215,245);
+background: radial-gradient(circle, rgba(16,215,245,1) 0%, rgba(9,89,5,1) 100%);
   display: flex;
-  place-items: center;
+  justify-content: flex-start;
   min-width: 320px;
   min-height: 100vh;
 }
