--- a/src/Form.css
+++ b/src/Form.css
@@ -2,7 +2,6 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  /* text-align: center; */
 }
 
 * {
@@ -10,23 +9,94 @@
   margin: 0;
 }
 
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-size: 36px;
+  font-weight: 500;
+  color: #c4eb8d;
+  text-align: center;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+  letter-spacing: 1px;
+  line-height: 1.2;
+  margin: 20px 0;
+}
+
+.loanDetails h1 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: rgb(18, 166, 235);
+  font-weight: 900;
+  text-align: left;
+}
+
+
 form {
-  border: 1px solid black;
-  padding: 5px;
-  border-radius: 5px;
   display: flex;
+  justify-content: space-between;
+  background-color: #85ffbd;
+  background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
+  width: 50rem;
+  border: none;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 24px 16px rgba(0,0,0,0.31);
 }
 
 .debtEntry {
   margin: 5px;
 }
 
-.numInput {
-  border-radius: 5px;
-  background-color: #888;
-  line-height: 30px;
-  margin: 10px 0px;
+.entry {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 1rem;
+  font-weight: 700;
 }
+
+.numInput {
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 8px;
+  font-size: 14px;
+  font-weight: 700;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+  line-height: 30px;
+  text-align:center;
+}
+
+.numInput:focus {
+  outline: none;
+  border-color: #3498db;
+  box-shadow: 0 0 10px rgba(52, 152, 219, 0.9);
+}
+
+.numInput:hover {
+  border-color: #999;
+}
+
+input[type="submit"] {
+  margin-left: 1rem;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  margin-top: 8px;
+  border-radius: 5px;
+}
+
+input[type="submit"]:hover {
+  background-color: #2980b9;
+}
+
+input[type="submit"]:focus {
+  outline: none;
+  box-shadow: 0 0 3px rgba(52, 152, 219, 0.5);
+}
+
+
+
 
 .loadDetails {
   display: flex;
