--- a/src/Form.css
+++ b/src/Form.css
@@ -1,7 +1,11 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 2rem;
+  height: 100%;
+  overflow: auto;
 }
 
 * {
@@ -34,7 +38,7 @@ form {
   justify-content: space-between;
   background-color: #85ffbd;
   background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
-  width: 50rem;
+  width: 70%;
   border: none;
   padding: 15px;
   border-radius: 5px;
@@ -95,10 +99,7 @@ input[type="submit"]:focus {
   box-shadow: 0 0 3px rgba(52, 152, 219, 0.5);
 }
 
-
-
-
-.loadDetails {
+.loanDetails {
   display: flex;
   flex-direction: column;
 }
@@ -122,25 +123,9 @@ input[type="submit"]:focus {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 780px) {
+  form {
+    flex-direction: column-reverse;
+    max-width: 90%;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
