--- a/src/PaymentHistory.css
+++ b/src/PaymentHistory.css
@@ -7,6 +7,8 @@
 .paymentHistory h2 {
   color: rgb(216, 237, 232);
   letter-spacing: 2px;
+  max-height: 50%;
+  overflow: auto;
 }
 
 .payment-table {
