--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,9 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  min-height: 100%;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -23,14 +21,20 @@ a:hover {
   color: #535bf2;
 }
 
+
+html {
+  height: 100%;
+}
+
 body {
-  margin: 2rem 0;
-  background: rgb(16,215,245);
-background: radial-gradient(circle, rgba(16,215,245,1) 0%, rgba(9,89,5,1) 100%);
   display: flex;
-  justify-content: flex-start;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 1rem;
+  background: radial-gradient(circle, rgba(16,215,245,1) 0%, rgba(9,89,5,1) 100%);
 }
 
 h1 {
