--- a/src/PaymentHistory.css
+++ b/src/PaymentHistory.css
@@ -18,7 +18,7 @@
 
 .payment-table th,
 .payment-table td {
-  color: whitesmoke;
+  color: rgb(0, 0, 0);
   font-family: sans-serif;
   font-weight: 500;
   border: 1px solid black;
